Some spacing issues fixed
-fixed alphabet grid overlap
-cleaned up bar about section

--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ Author: Kandice Levero
 }
 
 .letter_box {
-	width: 33%;
+	width: 30%;
 	height: 200px;
 	text-align: center;
 	display: inline-block;
@@ -349,7 +349,7 @@ Author: Kandice Levero
 
 .cocktail_intro_parent {
 	width: 100%;
-	height: 350px;
+	height: 300px;
 	/*border: 1px solid black;*/
 	margin: auto;
 	text-align: center;
@@ -360,7 +360,7 @@ Author: Kandice Levero
 	height: 270px;
 	display: inline-block;
 	width: 300px;
-	margin: 40px 20px 15px 0px;
+	margin: 20px 0px 15px 0px;
 }
 
 .stands_for {
@@ -415,7 +415,7 @@ Author: Kandice Levero
 }
 
 .about_cocktail {
-	width: 85%;
+	width: 90%;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
 	color: #00004d;
@@ -465,7 +465,6 @@ Author: Kandice Levero
 	height: 500px;
 	/*border: 1px solid black;*/
 	text-align: center;
-	margin-top: 100px;
 }
 
 .bar_bub {
